--- a/ENDE_Semester_PLF_GRG_2023-06/doc/s4-plf-002_movie-db.adoc
+++ b/ENDE_Semester_PLF_GRG_2023-06/doc/s4-plf-002_movie-db.adoc
@@ -67,9 +67,9 @@ MovieDatabase o-right- Movie
 model <-[hidden]- test
 ----
 
-// class MovieTest {
+// class GRGMovieTest {
 // }
-// class MovieDatabaseTest {
+// class GRGMovieDatabaseTest {
 // }
 
 
